--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Install Akash CLI
         run: |
-          curl -s https://raw.githubusercontent.com/ovrclk/akash/master/godownloader.sh | bash
-          sudo mv akash /usr/local/bin/
+          curl -s https://raw.githubusercontent.com/akash-network/akash/main/install.sh | bash
+          sudo mv bin/akash /usr/local/bin/
           akash version
 
       - name: Restore wallet from mnemonic
@@ -40,5 +40,8 @@ jobs:
 
       - name: Deploy to Akash Network
         run: |
-          # Replace with your actual deploy.yaml file or dynamic deploy commands
           echo "Deploying to Akash..."
+          # Replace this block with actual Akash deployment commands
+          # For example, you could generate a deployment:
+          # akash tx deployment create deploy.yaml --from $AKASH_WALLET_NAME --keyring-backend $AKASH_KEYRING_BACKEND --chain-id akashnet-2 --node https://rpc.akash.forbole.com:443 --gas-prices 0.025uakt --gas auto --gas-adjustment 1.5 -y
+
