--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,17 +27,11 @@ jobs:
       - name: Push Docker image to DockerHub
         run: docker push $IMAGE_NAME
 
-      - name: Install Akash CLI
+      - name: Install Akash CLI (prebuilt binary)
         run: |
-          sudo apt update
-          sudo apt install -y golang make git
-
-          git clone https://github.com/akash-network/node.git
-          cd node
-          git checkout v0.38.2
-          make install
-
-          sudo mv ~/go/bin/akash /usr/local/bin/
+          curl -LO https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
+          tar -xzf akash_0.38.2_Linux_x86_64.tar.gz
+          sudo mv akash /usr/local/bin/
           akash version
 
       - name: Restore wallet from mnemonic
