--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Push Docker image to DockerHub
         run: docker push $IMAGE_NAME
 
+     - name: Install Akash CLI (prebuilt binary)
+        run: |
+          curl -L -o akash.tar.gz https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
+          tar -xzf akash.tar.gz
+          sudo mv akash /usr/local/bin/
+          akash version
+
       - name: Install Akash CLI (prebuilt binary)
         run: |
           curl -LO https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
