--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
 
       - name: Install Akash CLI (prebuilt binary)
         run: |
-          curl -L -o akash.tar.gz https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
+          curl -L --fail -o akash.tar.gz https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
+          file akash.tar.gz
           tar -xzf akash.tar.gz
           sudo mv akash /usr/local/bin/
           akash version
