--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  deploy:  # 🟢 This was incorrectly indented before
+  deploy:
     runs-on: ubuntu-latest
 
     env:
@@ -27,11 +27,10 @@ jobs:
       - name: Push Docker image to DockerHub
         run: docker push $IMAGE_NAME
 
-      - name: Install Akash CLI (prebuilt binary)
+      - name: Install Akash CLI
         run: |
-          curl -L --fail -o akash.tar.gz https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
-          file akash.tar.gz
-          tar -xzf akash.tar.gz
+          curl -LO https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_x86_64.tar.gz
+          tar -xzf akash_0.38.2_Linux_x86_64.tar.gz
           sudo mv akash /usr/local/bin/
           akash version
 
