--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,10 @@ jobs:
 
       - name: Install Akash CLI
         run: |
-          curl -LO https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_amd64.tar.gz
-          tar -xzf akash_0.38.2_Linux_amd64.tar.gz
-          sudo mv akash /usr/local/bin/
+          curl -LO https://github.com/akash-network/node/releases/download/v0.38.2/akash_0.38.2_Linux_amd64.deb
+          sudo dpkg -i akash_0.38.2_Linux_amd64.deb
           akash version
-
+          
       - name: Restore wallet from mnemonic
         run: |
           echo "$AKASH_WALLET_MNEMONIC" | akash keys add "$AKASH_WALLET_NAME" --recover --keyring-backend "$AKASH_KEYRING_BACKEND"
