--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,8 @@ jobs:
           akash tx deployment create deploy.yaml \
             --from $AKASH_WALLET_NAME \
             --keyring-backend $AKASH_KEYRING_BACKEND \
-            --chain-id akashnet-2 \
-            --node https://rpc.akash.forbole.com:443 \
+            --chain-id akashnet-1 \
+            --node https://rpc.akashnet.net:443 \
             --dry-run
 
       - name: Deploy to Akash Network
