--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
 
     env:
       IMAGE_NAME: jhonny535/akash-web-app
-      AKASH_WALLET_NAME: ${{ secrets.AKASH_WALLET_NAME }}
+      AKASH_WALLET_NAME: testwallet
       AKASH_WALLET_MNEMONIC: ${{ secrets.AKASH_WALLET_MNEMONIC }}
       AKASH_KEYRING_BACKEND: test
 
@@ -46,8 +46,8 @@ jobs:
       - name: Validate deploy.yaml
         run: |
           akash tx deployment create deploy.yaml \
-            --from $AKASH_WALLET_NAME \
-            --keyring-backend $AKASH_KEYRING_BACKEND \
+            --from testwallet \
+            --keyring-backend test \
             --chain-id akashnet-1 \
             --node https://rpc.akashnet.net:443 \
             --dry-run
