--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
           sudo dpkg -i akash_0.38.2_Linux_amd64.deb
           akash version
 
-      - name: Debug environment variables
+      - name: Install provider-services CLI
         run: |
-          echo "AKASH_WALLET_NAME: $AKASH_WALLET_NAME"
-          echo "AKASH_KEYRING_BACKEND: $AKASH_KEYRING_BACKEND"
+          curl -s https://raw.githubusercontent.com/akash-network/provider/main/install.sh | bash
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Restore wallet from mnemonic
         run: |
@@ -52,7 +52,7 @@ jobs:
             --node https://rpc.akashnet.net:443 \
             --dry-run
 
-      - name: Deploy to Akash Network using provider-services
+      - name: Deploy to Akash Network
         run: |
           provider-services deployment create deploy.yaml \
             --from $AKASH_WALLET_NAME \
