--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,9 @@ jobs:
       - name: Install provider-services CLI
         run: |
           curl -s https://raw.githubusercontent.com/akash-network/provider/main/install.sh | bash
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-          export PATH="$HOME/.local/bin:$PATH"
+          echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
+          export PATH="$GITHUB_WORKSPACE/bin:$PATH"
           provider-services version
-
 
       - name: Restore wallet from mnemonic
         run: |
