--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Validate deploy.yaml (Dry-run)
         run: |
-          provider-services create deployment deploy.yaml \
+          provider-services send-manifest deploy.yaml \
             --from $AKASH_WALLET_NAME \
             --keyring-backend $AKASH_KEYRING_BACKEND \
             --chain-id akashnet-1 \
@@ -56,7 +56,7 @@ jobs:
 
       - name: Deploy to Akash Network
         run: |
-          provider-services create deployment deploy.yaml \
+          provider-services send-manifest deploy.yaml \
             --from $AKASH_WALLET_NAME \
             --keyring-backend $AKASH_KEYRING_BACKEND \
             --chain-id akashnet-1 \
