--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,19 +51,27 @@ jobs:
 
       - name: Generate Akash Certificate
         run: |
-          akash cert generate --from "$AKASH_WALLET_NAME" --keyring-backend "$AKASH_KEYRING_BACKEND"
+          akash tx cert generate \
+            --from "$AKASH_WALLET_NAME" \
+            --keyring-backend "$AKASH_KEYRING_BACKEND" \
+            --chain-id "$AKASH_CHAIN_ID" \
+            --node "$AKASH_NODE" \
+            --gas-prices 0.025uakt \
+            --gas auto \
+            --gas-adjustment 1.5 \
+            -y
 
-      - name: Create Certificate on Blockchain
+      - name: Publish Akash Certificate
         run: |
-          akash tx cert create-client \
-          --from "$AKASH_WALLET_NAME" \
-          --keyring-backend "$AKASH_KEYRING_BACKEND" \
-          --chain-id "$AKASH_CHAIN_ID" \
-          --node "$AKASH_NODE" \
-          --gas-prices 0.025uakt \
-          --gas auto \
-          --gas-adjustment 1.5 \
-          -y
+          akash tx cert publish \
+            --from "$AKASH_WALLET_NAME" \
+            --keyring-backend "$AKASH_KEYRING_BACKEND" \
+            --chain-id "$AKASH_CHAIN_ID" \
+            --node "$AKASH_NODE" \
+            --gas-prices 0.025uakt \
+            --gas auto \
+            --gas-adjustment 1.5 \
+            -y
 
       - name: Create Akash Deployment
         run: |
@@ -81,7 +89,7 @@ jobs:
         id: get-dseq
         run: |
           DSEQ=$(akash query deployment list \
-            --owner $(akash keys show "$AKASH_WALLET_NAME" -a) \
+            --owner $(akash keys show "$AKASH_WALLET_NAME" -a --keyring-backend "$AKASH_KEYRING_BACKEND") \
             --node "$AKASH_NODE" \
             --output json | jq -r '.deployments[-1].deployment.deployment_id.dseq')
           echo "DSEQ=$DSEQ" >> $GITHUB_ENV
