--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,15 +51,7 @@ jobs:
 
       - name: Generate Akash Certificate
         run: |
-          akash tx cert generate \
-            --from "$AKASH_WALLET_NAME" \
-            --keyring-backend "$AKASH_KEYRING_BACKEND" \
-            --chain-id "$AKASH_CHAIN_ID" \
-            --node "$AKASH_NODE" \
-            --gas-prices 0.025uakt \
-            --gas auto \
-            --gas-adjustment 1.5 \
-            -y
+          akash tx cert generate
 
       - name: Publish Akash Certificate
         run: |
