--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,12 @@ jobs:
 
       - name: Generate Akash Certificate
         run: |
-           akash tx cert generate
+          akash tx cert generate
+
+      - name: Move generated certificates to .akash
+        run: |
+          mkdir -p ~/.akash
+          cp *.pem ~/.akash/
 
       - name: Publish Akash Certificate
         run: |
