--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,11 +52,19 @@ jobs:
       - name: Generate Akash Certificate
         run: |
           akash tx cert generate
-
+          # List the files in the current directory to ensure the .pem files are generated
+          ls -alh *.pem || echo "No PEM files found"
+          
       - name: Move generated certificates to .akash
         run: |
           mkdir -p ~/.akash
-          cp *.pem ~/.akash/
+          # Check if *.pem files exist before attempting to copy
+          if ls *.pem 1> /dev/null 2>&1; then
+            cp *.pem ~/.akash/
+          else
+            echo "No PEM files to copy, exiting."
+            exit 1
+          fi
 
       - name: Publish Akash Certificate
         run: |
