--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,8 @@ jobs:
 
       - name: Create Akash Deployment
         run: |
-          akash tx deployment create deploy.yaml --from $AKASH_KEY_NAME \
+          akash tx deployment create deploy.yaml 
+            --from $AKASH_KEY_NAME \
             --from "$AKASH_WALLET_NAME" \
             --keyring-backend "$AKASH_KEYRING_BACKEND" \
             --chain-id "$AKASH_CHAIN_ID" \
